--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "rimraf": "^2.5.4"
   },
   "dependencies": {
-    "body-parser": "^1.16.0",
     "bunyan": "^1.8.5",
     "express": "^4.14.0",
+    "raw-body": "^2.2.0",
     "source-map-support": "^0.4.10"
   }
 }
