--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "bunyan": "^1.8.5",
     "express": "^4.14.0",
+    "htpasswd-auth": "^2.0.0",
     "raw-body": "^2.2.0",
     "source-map-support": "^0.4.10"
   }
